[tool.poetry]
name = "stranded"
version = "0.1.0"
description = ""
authors = ["Alex Lee <westford14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
xgboost = "^2.1.2"
prefect = "^3.1.0"
mlflow = "^2.17.2"


[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-commas = "*"
flake8-docstrings = "*"
flake8-formatter-abspath = "*"
flake8-import-order = "*"
mypy = "<1.5"
pep8-naming = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
pydocstyle = "*"
tox = "*"
isort = "*"
jupyterlab = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
